{
    "a3": "a3",
    "a4": "a4",
    "about": "ɣef",
    "add": "rnu",
    "always": "yal tikelt",
    "appearance": "Askan",
    "ask_everytime": "Ssuter yal tikkelt",
    "auto": "awurman",
    "brightness": "tifawit",
    "camera": "Takamiṛat",
...
    "folder": "akaram",
    "folders": "Ikaramen",
    "french": "Tafṛansist",
    "full": "Ummid",
    "general": "amatu",
    "here": "Da",
    "image": "tugna",
    "image_quality": "Taɣara n tugna",
    "image_settings": "iɣewwaṛen n tugna",
    "import_settings": "Taǧǧawt n iɣewwaṛen",
    "inapp": {
        "largetip": "tabyirt"
    },
...
